project/visa/test/assembler/error/duplicated-constant.asm
define x 42
define x #42
load x, R0
